[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "actgrader_client_2024"
version = "0.0.1"
authors = [
  { name="R. Handsfield", email="rhandsfield@duck.com" },
]
description = "A client for using the ACT Grader service."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {text = "GNU GPLv3"}
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/r-handsfield/heroku-actgrader-clilent"
Issues = "https://github.com/r-handsfield/heroku-actgrader-clilent"

[tool.hatch.build.targets.wheel]
packages = ["src/actgrader_client_2024"]


