[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "actgrader_client_0.0.0"
version = "0.0.1"
authors = [
  { name="R. Handsfield", email="rhandsfield@duck.com" },
]
description = "A client for using the ACT Grader service."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {text = "GPLv3"}
license-files = ["LICEN[CS]E*"]

dependencies = ["requests"] 

[project.urls]
Homepage = "https://github.com/r-handsfield/heroku-actgrader-client"
Issues = "https://github.com/r-handsfield/heroku-actgrader-client"

[tool.hatch.build.targets.wheel]
packages = ["graderclient"] # dir containing the files to be packaged


